Opened 3 years ago

Closed 3 years ago

#10226 closed defect (fixed)

Filter commands no longer work

Reported by: Gyan Owned by:
Priority: important Component: avfilter
Version: git-master Keywords:
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: yes

Description

Runtime commands sent to avfilters return ENOSYS with all the filters I tested.

How to reproduce, e.g:

%  ffmpeg -i input -vf drawbox@test=w=100:h=100:t=fill:c=yellow output

Once running, press 'c' and input drawbox@test -1 c red [Enter]

ret is -40.

Contrast with 5.1.2 or earlier, where ret is 0 and the changed color can be seen in the output.

The culprit is
f17051eaae278c6683492c037e5a1658ace64bec
"lavfi/graphparser: reimplement avfilter_graph_parse* using new API"

Probably in conjunction with
4310b66b985e5d8f4463639c007d876e4439e7a9
"lavfi/avfilter: track whether a filter has been initialized"

This affects 6.0 as well.

Change History (2)

comment:1 by James, 3 years ago

Reproduced by developer: set
Status: newopen

Workaround is to use either "drawbox" or "test" as filter name in the command.

comment:2 by James, 3 years ago

Analyzed by developer: set
Resolution: fixed
Status: openclosed

Fixed in 2fd86d9afadf9b62c2e900505558141a35e2ed6f and backported to release/6.0

Note: See TracTickets for help on using tickets.