avfilter/graphparser: fix filter instance name when an id is provided

Restores the behavior of naming the instance filter@id, which was accidentally changed
to simpy id in commit f17051eaae.

Fixes ticket #10226.

Signed-off-by: James Almer <jamrial@gmail.com>
(cherry picked from commit 2fd86d9afadf9b62c2e900505558141a35e2ed6f)